--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,18 +104,48 @@ markdown_extensions:
 
 nav:
   - 首页: index.md
-  - 1.Java基础:
-    - 1.1.Java基础: 1/1.1.md
-    - 1.2.OOP: 1/1.2.md
-  - 2.Java集合:
-    - 2.1.List: 2/2.1.md
-    - 2.2.Map: 2/2.2.md
-  - 3.扩展:
-    - 3.1 math: 3/math.md
-    - 3.2 images: 3/images.md
-    - 3.3 formatting: 3/formatting.md
-    - 3.4 code blocks: 3/code-blocks.md
-    - 3.5 content tabs: 3/content-tabs.md
-    - 3.6 data tables: 3/data-tables.md
-    - 3.7 diagrams: 3/diagrams.md
-    - 3.8 footnotes: 3/footnotes.md
+  - 1.基础处理:
+    - 1.1.变量: 1-基础处理/1.1.变量.md
+    - 1.2.基本数据类型: 1-基础处理/1.2.基本数据类型.md
+    - 1.3.字符串和正则: 1-基础处理/1.md
+    - 1.4.运算符和表达式: 1-基础处理/1.md
+    - 1.5.流程控制: 1-基础处理/1.md
+    - 1.6.函数和模块: 1-基础处理/1.md
+    - 1.7.异常处理: 1-基础处理/1.md
+    - 1.8.日期和时间: 1-基础处理/1.md
+  - 2.集合处理:
+    - 2.1.序列: 2-集合处理/1.md
+    - 2.2.列表: 2-集合处理/1.md
+    - 2.3.元组: 2-集合处理/1.md
+    - 2.4.集合: 2-集合处理/1.md
+    - 2.5.字典: 2-集合处理/1.md
+  - 3.面向对象:
+    - 3.1 类: 3-面向对象/1.md
+    - 3.2 继承: 3-面向对象/1.md
+  - 4.进程和线程:
+    - 4.1 进程: 4-进程和线程/1.md
+    - 4.2 线程: 4-进程和线程/1.md
+  - 5.文件处理:
+    - 5.1 基本文件目录: 5-文件处理/1.md
+    - 5.2 Excel文件: 5-文件处理/1.md
+    - 5.3 Json文件: 5-文件处理/1.md
+    - 5.4 pdf文件: 5-文件处理/1.md
+    - 5.5 csv文件: 5-文件处理/1.md
+    - 5.6 xml文件: 5-文件处理/1.md
+  - 6.数据库:
+    - 6.1 Oracle: 6-数据库/1.md
+    - 6.2 Mysql: 6-数据库/1.md
+    - 6.3 Redis: 6-数据库/1.md
+    - 6.4 Mongo: 6-数据库/1.md
+  - 7.网络编程:
+    - 7.1 TCP编程: 7-网络编程/1.md
+    - 7.2 UDP编程: 7-网络编程/1.md
+  - 8.Web编程:
+    - 8.1 Http: 8-Web编程/1.md
+    - 8.2 Wsgi: 8-Web编程/1.md
+    - 8.3 Flask框架: 8/1.md
+  - 9.性能分析:
+    - 9.1 性能分析: 9-性能分析/1.md
+  - 10.问题总结:
+    - 10.1 问题总结: 10-问题总结/1.md
+
