--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,45 +107,39 @@ nav:
   - 1.基础处理:
     - 1.1.变量: 1-基础处理/1.1.变量.md
     - 1.2.基本数据类型: 1-基础处理/1.2.基本数据类型.md
-    - 1.3.字符串和正则: 1-基础处理/1.md
-    - 1.4.运算符和表达式: 1-基础处理/1.md
-    - 1.5.流程控制: 1-基础处理/1.md
-    - 1.6.函数和模块: 1-基础处理/1.md
-    - 1.7.异常处理: 1-基础处理/1.md
-    - 1.8.日期和时间: 1-基础处理/1.md
+    - 1.3.字符串和正则: 1-基础处理/1.3.字符串和正则.md
+    - 1.4.运算符和表达式: 1-基础处理/1.4.运算符和表达式.md
+    - 1.5.流程控制: 1-基础处理/1.5.流程控制.md
+    - 1.6.函数和模块: 1-基础处理/1.6.函数和模块.md
+    - 1.7.异常处理: 1-基础处理/1.7.异常处理.md
+    - 1.8.日期和时间: 1-基础处理/1.8.日期和时间.md
   - 2.集合处理:
-    - 2.1.序列: 2-集合处理/1.md
-    - 2.2.列表: 2-集合处理/1.md
-    - 2.3.元组: 2-集合处理/1.md
-    - 2.4.集合: 2-集合处理/1.md
-    - 2.5.字典: 2-集合处理/1.md
-  - 3.面向对象:
-    - 3.1 类: 3-面向对象/1.md
-    - 3.2 继承: 3-面向对象/1.md
+    - 2.1.列表: 2-集合处理/2.1.列表.md
+    - 2.2.元组: 2-集合处理/2.2.元组.md
+    - 2.3.集合: 2-集合处理/2.3.集合.md
+    - 2.4.字典: 2-集合处理/2.4.字典.md
+  - 3.类和对象:
+    - 3.1 类: 3-类和对象/3.1.类.md
+    - 3.2 继承: 3-类和对象/3.2.继承.md
+    - 3.3 类的组合: 3-类和对象/3.3.类的组合.md
   - 4.进程和线程:
-    - 4.1 进程: 4-进程和线程/1.md
-    - 4.2 线程: 4-进程和线程/1.md
+    - 4.1 多进程: 4-进程和线程/4.1.多进程.md
+    - 4.2 多线程: 4-进程和线程/4.2.多线程.md
   - 5.文件处理:
-    - 5.1 基本文件目录: 5-文件处理/1.md
-    - 5.2 Excel文件: 5-文件处理/1.md
-    - 5.3 Json文件: 5-文件处理/1.md
-    - 5.4 pdf文件: 5-文件处理/1.md
-    - 5.5 csv文件: 5-文件处理/1.md
-    - 5.6 xml文件: 5-文件处理/1.md
+    - 5.1 文件目录: 5-文件处理/5.1.文件目录.md
+    - 5.2 Excel处理: 5-文件处理/5.2.Excel处理.md
+    - 5.3 Json处理: 5-文件处理/5.3.Json处理.md
+    - 5.4 pdf处理: 5-文件处理/5.4.pdf处理.md
   - 6.数据库:
-    - 6.1 Oracle: 6-数据库/1.md
-    - 6.2 Mysql: 6-数据库/1.md
-    - 6.3 Redis: 6-数据库/1.md
-    - 6.4 Mongo: 6-数据库/1.md
+    - 6.1 Oracle: 6-数据库/6.1.Oracle.md
+    - 6.2 Mysql: 6-数据库/6.2.Mysql.md
+    - 6.3 Redis: 6-数据库/6.3.Redis.md
   - 7.网络编程:
     - 7.1 TCP编程: 7-网络编程/1.md
     - 7.2 UDP编程: 7-网络编程/1.md
   - 8.Web编程:
-    - 8.1 Http: 8-Web编程/1.md
-    - 8.2 Wsgi: 8-Web编程/1.md
-    - 8.3 Flask框架: 8/1.md
+    - 8.1 Http: 8-Web编程/8.1.Http.md
+    - 8.2 Flask框架: 8-Web编程/8.2.Flask.md
   - 9.性能分析:
     - 9.1 性能分析: 9-性能分析/1.md
-  - 10.问题总结:
-    - 10.1 问题总结: 10-问题总结/1.md
 
